# feeling-rusty-a-bit

./: LICENSE  README.md  index.html
0-Hello_World/src/: main.rs
5-Ping_Test/: build.rs
5-Ping_Test/src/: main.rs
5-ping-test-v2/: Cargo.toml
5-ping-test-v2/src/: main.rs
Test here/Test-rust/: Cargo.toml
Test here/Test-rust/src/: main.rs
dns-setter/: Cargo.toml  README.md  build.rs  dns-setter.iss
dns-setter/src/: app.rs  domain.rs  main.rs  main_.rs  system.rs
don-setter/: Cargo.toml
don-setter/src/: main.rs
