[package]
name = "dns-setter"
version = "0.3.0"
edition = "2024"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = { version = "0.33.0", features = ["default", "__screenshot"] }
egui_extras = { version = "0.33.0", features = ["default", "all_loaders"] }
env_logger = { version = "0.11.8", features = ["auto-color", "humantime"] }
image = { version = "0.25.8", features = ["jpeg", "png"] }
ping = "0.7.0"
regex = "1.12.2"
